# hermes-prewalk

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
prewalk/: README.md  __init__.py  core.py  plugin.yaml  presets.yaml
tests/: conftest.py  test_presets.py  test_real_lifecycle.py  test_review_regressions.py  test_same_turn_handoff.py  test_state_and_routing.py  test_todo_gate.py
