[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-prewalk"
version = "1.2.0"
description = "Correct same-trajectory frontier-planner to fast-executor handoff for Hermes Agent"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "Kosta Milovanovic"}]
dependencies = ["PyYAML>=6"]

[project.entry-points."hermes_agent.plugins"]
prewalk = "prewalk"

[project.optional-dependencies]
test = ["pytest>=8", "pytest-cov>=5"]

[tool.setuptools.package-data]
prewalk = ["plugin.yaml", "presets.yaml", "README.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = ["integration: requires a Hermes Agent source checkout"]
